# dwn-pro

./: README.md  Vercel.json  api_test_report.json  app.py  download_test_report.json  full_test_report.json  pyproject.toml  requirements.txt  setup.py  setup.sh  test_api_comprehensive.py  test_complete_api.py  test_complete_system.py  test_download_complete.py  test_file_serving.py  test_full_platform.py
config/: settings.py
src/: __init__.py
src/api/: app.py  models.py  routes.py
src/cli/: main.py
src/core/: __init__.py  downloader.py  progress_tracker.py  quality_manager.py  url_detector.py
src/social_media_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: formatters.py  validators.py
templates/: index.html
tests/: test_downloader.py
