[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-downloader"
version = "1.0.0"
description = "Download videos from YouTube, Facebook, Instagram with unique content IDs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Social Media Downloader", email = "dev@example.com"}
]
keywords = ["video", "downloader", "youtube", "facebook", "instagram", "api", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "yt-dlp>=2024.1.1",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
smd-server = "app:main"
smd = "cli.main:main"

[project.urls]
Homepage = "https://github.com/example/social-media-downloader"
Repository = "https://github.com/example/social-media-downloader"
Issues = "https://github.com/example/social-media-downloader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "A", "PL", "TRY", "RUF"]
ignore = [
    "E501",
    "B008",
    "C901",
    "PLR2004",
    "RUF001",
]
unfixable = ["F401"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
ignore_missing_imports = true
